ajeitando os formulários de contato

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,7 +18,7 @@ h2 {
     font-size: 22px;
 }
 
-input, select, textarea, button {
+select, textarea, button {
     width: 100%;
     padding: 10px 15px;
     margin: 10px 0px 10px 0px;
@@ -27,6 +27,15 @@ input, select, textarea, button {
     background-color: transparent;
     color: #333;
 }
+
+input {
+    width: 100%;
+    padding: 10px 15px;
+    margin: 10px 0px 10px 0px;
+    box-sizing: border-box;
+    border-radius: 3px;
+    background-color: transparent;
+} 
 
 .texto-branco {
     color: #ffffff;
