--- a/public/css/app.css
+++ b/public/css/app.css
@@ -37,6 +37,10 @@ input {
     background-color: transparent;
 } 
 
+.invalid-feedback {
+    color:#d61e1e
+}
+
 .texto-branco {
     color: #ffffff;
 }
