adicionando models, migrations e view referente a tela de cadastro

--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -2238,6 +2238,11 @@ textarea.form-control-lg {
 .form-check-input[type=radio] {
   border-radius: 50%;
 }
+
+.radio{
+  margin-top: 0px;
+  margin-left: 5px;
+}
 .form-check-input:active {
   filter: brightness(90%);
 }
