--- a/public/css/app.css
+++ b/public/css/app.css
@@ -43,7 +43,7 @@ input {
     padding: 10px 15px;
     margin: 10px 0px 10px 0px;
     box-sizing: border-box;
-    border-radius: 3px;
+    border-radius: 5px;
     background-color: transparent;
 }
 
@@ -64,6 +64,10 @@ input {
     color: #000000;
 }
 
+.texto-preto {
+    color: #ffffff;
+}
+
 .borda-branca {
     border: solid 1px #000000;
 }
@@ -76,6 +80,7 @@ input {
 }
 
 .borda-preta {
+    margin-bottom: 15px;
     border: solid 1px #333;
 }
 
@@ -194,6 +199,13 @@ button:hover {
 
 .titulo-pagina {
     padding: 100px 0px 60px 0px;
+    background-color: #2a9ee2;
+    text-align: center;
+}
+
+.titulo-pagina-2 {
+    padding: 80px 0px 10px 0px;
+    margin-bottom: 15px;
     background-color: #2a9ee2;
     text-align: center;
 }
